# rscmSolverCpp

./: .gitignore  Adder.cpp  Adder.h  CMakeLists.txt  CPModel.cpp  CPModel.h  DAG.h  JSONDumper.cpp  JSONDumper.h  Layer.cpp  Layer.h  Node.cpp  Node.h  ParamDefs.h  Parameter.cpp  Parameter.h  RSCM.cpp  RSCM.h  Rcm.cpp  Rcm.h  Solver.cpp  Solver.h  VariableDefs.h  Variables.cpp  Variables.h  Verilog.cpp  Verilog.h  analyzer.py  log.txt  main.cpp
all_optimal_solutions/: solution_0.json  solution_1.json  solution_10.json  solution_100.json  solution_1000.json  solution_10000.json  solution_10001.json  solution_10002.json  solution_10003.json  solution_10004.json  solution_10005.json  solution_10006.json  solution_10007.json  solution_10008.json  solution_10009.json  solution_1001.json  solution_10010.json  solution_10011.json  solution_10012.json  solution_10013.json  solution_10014.json  solution_10015.json  solution_10016.json  solution_10017.json  solution_10018.json  solution_10019.json  solution_1002.json  solution_10020.json  solution_10021.json  solution_10022.json  solution_10023.json  solution_10024.json  solution_10025.json  solution_10026.json  solution_10027.json  solution_10028.json  solution_10029.json  solution_1003.json  solution_10030.json  solution_10031.json  (+19220 more)
benches/: 0&1&2_adders_constants.txt  0&1_adders_constants.txt  1_adders_constants.txt  2_adders_constants.txt  bench_runner.py  filter_adders.py  make_sym_datasets.py  pagfuse.py  plot_optimal_costs.py  recompute_snapshots.py  report_lut_batches.py  satcmm_bench.py  selector.py  summarize_lut_costs.py  update_rom_cost.py
benches/bench_new_luts_recomputed/10bits/16on10bitsR100/case_001/: console.txt  params.json  solution.json
benches/bench_new_luts_recomputed/10bits/16on10bitsR100/case_002/: console.txt  solution.json
benches/bench_new_luts_recomputed/10bits/16on10bitsR100/case_003/: params.json  snapshot.rscm  solution.json
benches/bench_new_luts_recomputed/10bits/16on10bitsR100/case_004/: snapshot.rscm  solution.json
benches/bench_new_luts_recomputed/10bits/16on10bitsR100/case_005/: params.json  snapshot.rscm  solution.json
benches/bench_new_luts_recomputed/10bits/16on10bitsR100/case_006/: console.txt  solution.json
benches/bench_new_luts_recomputed/10bits/4on10bitsR100/: summary.json
benches/bench_new_luts_recomputed/12bits/16on12bitsR100/: summary.json
benches/bench_new_luts_recomputed/12bits/4on12bitsR100/: summary.json
benches/bench_new_luts_recomputed/12bits/8on12bitsR100/: summary.json
benches/bench_new_luts_recomputed/5bits/16on5bitsR100/: summary.json
benches/bench_new_luts_recomputed/6bits/16on6bitsR100/: summary.json
benches/bench_new_luts_recomputed/8bits/4on8bitsR100/: summary.json
benches/bench_new_luts_recomputed/8bits/8on8bitsR100/: summary.json
benches/separate_rom/10bits/16on10bitsR100/: summary.json
benches/separate_rom/10bits/8on10bitsR100/: summary.json
benches/separate_rom/5bits/4on5bitsR100/: summary.json
benches/separate_rom/5bits/8on5bitsR100/: summary.json
benches/separate_rom/6bits/4on6bitsR100/: summary.json
benches/separate_rom/6bits/8on6bitsR100/: summary.json
benches/separate_rom/8bits/16on8bitsR100/: summary.json
src/: CMakeLists.txt  README.md  main.cpp
src/cp/: CPModel.cpp  CPModel.h
src/shared/: Adder.cpp  DAG.cpp  DAG.h  Layer.cpp  VariableDefs.h
src/solver/: CostComputer.cpp  CostComputer.h  CostModel.h  ICostComputer.h  RSCM.cpp  RSCM.h  Solver.cpp  Solver.h
src/writers/: JSONDumper.cpp  JSONDumper.h  SnapshotIO.cpp  SnapshotIO.h  Verilog.cpp  Verilog.h
(+40481 files in other folders)
